# BareBot

./: .gitignore  CMakeLists.txt
include/: client.h  env.h  network.h  tests.h  utils.h
src/: client.c  env.c  main.c
src/network/: client.c  websocket.c
src/network/http/: client.c  http.c
src/network/websocket/: heartbeat.c  websocket.c
src/utils/: env.c  keygen.c
tests/: test_client.c  test_env.c  test_http.c  test_keygen.c  test_websocket.c  tests.c
